# django-drf

./: README.md  pyproject.toml
musiclib/: db.sqlite3
musiclib/music/: admin.py  mixins.py  models.py  serializers.py  urls.py  views.py
musiclib/music/migrations/: 0001_initial.py  0002_artist_alter_track_artist.py
musiclib/music/templates/: login.html  protected.html
musiclib/musiclib/: asgi.py  settings.py  urls.py  wsgi.py
